Added youtube video and minor iframe adjustments

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -52,7 +52,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNfKYfNs3jPDlQbd1zYAGLoVKYr-HWanAFdcpaK2kkJ4kQLQ/viewform"></iframe>
+                        <iframe class="iframe" src="https://docs.google.com/forms/d/e/1FAIpQLSdNfKYfNs3jPDlQbd1zYAGLoVKYr-HWanAFdcpaK2kkJ4kQLQ/viewform"></iframe>
                     </div>
                 </div>
             </div>
