--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -58,6 +58,11 @@
         </ol>
     </div>
     <div class="content content-2">
+        <h4>Jordan</h4>
+        <div class='content'> lived in Jordan for a semester in 2022.  Enjoy some highlights about Jordan, and consider visiting yourself. </div><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/zC4t3fP1vhY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <div class="content content-2">
         <h4>
             Tableau Work
         </h4>
