Fixed minor wording issue

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -48,7 +48,7 @@
             <ul>
                 <li>Missionary <span class="bold">The Church of Jesus Christ of Latter-day Saints </span><span class="emphasize">(2017-2019)</span> </li>
                 <ul>
-                    <li>Lead and conducted training conferences for fellow missionaries, and kept</li>
+                    <li>Lead and conducted training conferences for fellow missionaries, and collected and reported key indicators</li>
                 </ul>
                 <li>English Teacher <span class="bold">Unified Languages </span><span class="emphasize">(August - December, 2022), Amman Jordan</span></li>
                 <ul>
